@@ -1,3 +1,8 @@
+2003-07-04  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* tests/cmdAH.test: Made tests of [file mtime] work better on FAT
+	filesystems. [Patch 760768]  Also a little general cleanup.
+
 2003-06-25  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/configure: Regen.
